--- a/src/main/resources/an/dpr/manteniket/pages/BicisPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BicisPage.html
@@ -1,7 +1,7 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <head>
 <meta charset="utf-8" />
-<title>Apache Wicket Quickstart</title>
+<title>Manteniket</title>
 <link
 	href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:regular,bold'
 	rel='stylesheet' type='text/css' />
@@ -13,31 +13,29 @@
 		<div class="container">
 			<div wicket:id="feedback">
 				<ul class="feedbackPanel">
-					<li class="feedbackPanelERROR"><span
-						class="feedbackPanelERROR">Field 'Username' is required.</span></li>
+					<li class="feedbackPanelERROR">
+						<span class="feedbackPanelERROR">Field 'Username' is required.</span>
+					</li>
 				</ul>
 			</div>
 			<form wicket:id="form">
 				<input wicket:id="txtId" type="text" />
-				<p>
-					<label><wicket:message key="lbl.name" /></label> <input
-						wicket:id="txtCod" type="text" />
-				</p>
-				<p>
-					<label><wicket:message key="lbl.tipo" /></label> <select
-						wicket:id="cmbType" />
-				</p>
-				<div wicket:id="dropdown">dropdown</div>
-				<p>
-					<label><wicket:message key="lbl.desc" /></label> <input
-						wicket:id="txtDesc" size="50" />
-				</p>
-				<button wicket:id="saveBtn">
-					<wicket:message key="btn.save" />
-				</button>
-				<button wicket:id="retBtn">
-					<wicket:message key="btn.return" />
-				</button>
+				<div class="form-group">
+					<label for="txtCod"><wicket:message key="lbl.name" /></label> 
+					<input class="form-control" wicket:id="txtCod" type="text" />
+				</div>
+				<div class="form-group">
+					<label for="cmbType"><wicket:message key="lbl.tipo" /></label> 
+					<select class="form-control" wicket:id="cmbType"></select>
+				</div>
+				<div class="form-group">
+					<label for="txtDesc"><wicket:message key="lbl.desc" /></label>
+					<input class="form-control" wicket:id="txtDesc" size="50" />
+				</div>
+				<div class="form-group">
+					<button wicket:id="saveBtn">Save</button>
+					<button wicket:id="retBtn">Return</button>
+				</div>
 			</form>
 		</div>
 	</wicket:extend>
