--- a/src/main/resources/an/dpr/manteniket/pages/BicisDeletePage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BicisDeletePage.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<html xmlns:wicket="http://wicket.apache.org">
 <head>
+<meta charset="utf-8" />
+<title>Manteniket</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
 </head>
 <body>
 	<wicket:extend>
