--- a/src/main/java/an/dpr/manteniket/LoginPage.html
+++ b/src/main/java/an/dpr/manteniket/LoginPage.html
@@ -10,12 +10,17 @@
 			<fieldset>
 				<legend style="color: #F90">Login</legend>
 				<p wicket:id="loginStatus"></p>
-				<span>Username: </span><input wicket:id="username" type="text"
-					id="username" /><br /> <span>Password: </span><input
-					wicket:id="password" type="password" id="password" />
-				<p>
-					<input type="submit" name="Login" value="Login" />
-				</p>
+				<div class="form-group">
+					<label for="username">Username:</label>
+					<input  class="form-control" wicket:id="username" type="text"	id="username" />
+				</div>
+				<div class="form-group">
+					<label for="password">Password:</label>
+					<input  class="form-control" wicket:id="password" type="password" id="password" />
+				</div>
+				<div class="form-group">
+					<button wicket:id="login"></button>
+				</div>
 			</fieldset>
 		</form>
 	</wicket:extend>
