--- a/src/main/resources/an/dpr/manteniket/pages/ComponentUsePage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ComponentUsePage.html
@@ -1,45 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<html xmlns:wicket="http://wicket.apache.org">
 <head>
+<meta charset="utf-8" />
+<title>Manteniket</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
 </head>
 <body>
 	<wicket:extend>
 		<div wicket:id="feedback">
 			<ul class="feedbackPanel">
-				<li class="feedbackPanelERROR"><span class="feedbackPanelERROR">Field
+				<li class="feedbackPanelERROR">
+					<span class="feedbackPanelERROR">Field
 						'Username' is required.</span></li>
 			</ul>
 		</div>
 		<form wicket:id="form">
 		 <input wicket:id="txtId" type="text"/>
-		<p>
-			<label><wicket:message key="lbl.init"/></label>
-			<input wicket:id="txtInit" type="text"/>
-		</p>
-		<p>
-			<label><wicket:message key="lbl.finish"/></label>
-			<input wicket:id="txtFin" type="text"/>
-		</p>
-		<p>
-			<label><wicket:message key="lbl.bike"/></label>
-			<select wicket:id="cmbBike" />
-		</p>
-		<p>
-			<label><wicket:message key="lbl.component"/></label>
-			<select wicket:id="cmbComp" />
-		</p>
-		<p>
-			<label><wicket:message key="lbl.desc"/></label>
-			<textarea wicket:id="txtDesc" rows="4" cols="40"></textarea>
-		</p>
+		<div class="form-group">
+			<label for="txtInit"><wicket:message key="lbl.init"/></label>
+			<input class="form-control" wicket:id="txtInit" type="text"/>
+		</div>
+		<div class="form-group">
+			<label for="txtFin"><wicket:message key="lbl.finish"/></label>
+			<input class="form-control" wicket:id="txtFin" type="text"/>
+		</div>
+		<div class="form-group">
+			<label for="cmbBike"><wicket:message key="lbl.bike"/></label>
+			<select class="form-control" wicket:id="cmbBike" ></select>
+		</div>
+		<div class="form-group">
+			<label for="cmbComp"><wicket:message key="lbl.component"/></label>
+			<select class="form-control" wicket:id="cmbComp" ></select>
+		</div>
+		<div class="form-group">
+			<label for="txtDesc"><wicket:message key="lbl.desc"/></label>
+			<textarea class="form-control" wicket:id="txtDesc" rows="4" cols="40"></textarea>
+		</div>
+		<div class="form-group">
 			<button wicket:id="saveBtn">
 				<wicket:message key="btn.save"/>
 			</button>
 			<button wicket:id="retBtn">
 				<wicket:message key="btn.return"/>
 			</button>
+		</div>
 		</form>
 	</wicket:extend>
 </body>
