tablebehaviour buttons add en cuenta de links en listados

--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesListPage.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<wicket:extend>
-		<div>
-			<a wicket:id="lnkAdd"><span wicket:id="lblAdd">anyadir</span></a>
-		</div>
-		<table class="table">
+		<form wicket:id="form">
+			<button wicket:id="btnAdd"></button>
+		</form>
+		<table wicket:id="table">
 			<tr>
 				<th><span wicket:id="headDate">Date</span></th>
 				<th><span wicket:id="headKm">Km</span></th>
