carousel con imgs en webapp

--- a/src/main/java/an/dpr/manteniket/MainPage.html
+++ b/src/main/java/an/dpr/manteniket/MainPage.html
@@ -5,8 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-<wicket:extend>
-	<span wicket:id="lblBienvenida">hola</span>
-</wicket:extend>
+	<wicket:extend>
+		<span wicket:id="lblBienvenida">hola</span>
+		<div wicket:id="carousel">carousel</div>
+	</wicket:extend>
 </body>
 </html>
