solucion de problemas de direccion. logout nuevos campos actividades

--- a/src/main/resources/an/dpr/manteniket/MainPage.html
+++ b/src/main/resources/an/dpr/manteniket/MainPage.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 	<wicket:extend>
-		<span wicket:id="lblBienvenida">hola</span>
-		<div wicket:id="carousel">carousel</div>
+		<!-- 
+		 <span wicket:id="lblBienvenida">hola</span>
+		 -->
+		 <div span="3">&nbsp;</div>
+		 <div span="6" wicket:id="carousel">carousel</div>
+		 <div span="3">&nbsp;</div>
 	</wicket:extend>
 </body>
 </html>
