--- a/src/main/resources/an/dpr/manteniket/pages/BikeCompListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BikeCompListPage.html
@@ -9,7 +9,7 @@
 	<form wicket:id="form">
 		<div class="btn-group">
 			<button wicket:id="btnAdd"></button>
-			<button wicket:id="btnReturn"></button>
+			<!--<button wicket:id="btnReturn"></button> -->
 		</div>
 	</form>
 		<table wicket:id="table">
