--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.html
@@ -21,8 +21,16 @@
 			<form wicket:id="form">
 				<input wicket:id="txtId" type="text" />
 				<div class="form-group">
+					<label for="txtTime" wicket:id="lblTime">time:</label> 
+					<span class="form-control" wicket:id="txtTime">Tiempo</span>
+				</div>
+				<div class="form-group">
 					<label for="txtKm" wicket:id="lblKm">Km:</label>
 					<input class="form-control" wicket:id="txtKm" type="text" />
+				</div>
+				<div class="form-group">
+					<label for="txtHeartRate" wicket:id="lblHeartRate">HR:</label>
+					<input class="form-control" wicket:id="txtHeartRate" type="text" />
 				</div>
 				<div class="form-group">
 					<label for="txtDesc" wicket:id="lblDesc">Desc:</label> 
@@ -33,12 +41,12 @@
 					<input class="form-control" wicket:id="txtDate"	type="text" size="10" />
 				</div>
 				<div class="form-group">
-					<label for="txtTime" wicket:id="lblTime">time:</label> 
-					<span class="form-control" wicket:id="txtTime">Tiempo</span>
-				</div>
-				<div class="form-group">
 					<label for="cmbBike" wicket:id="lblBike">bike:</label> 
 					<select class="form-control" wicket:id="cmbBike"></select>
+				</div>
+				<div class="form-group">
+					<label for="cmbType" wicket:id="lblType">Type:</label> 
+					<select class="form-control" wicket:id="cmbType"></select>
 				</div>
 				<div class="form-group">
 					<button wicket:id="btnSave">Save</button>
