sort list in activities new cycling type "urban" bootstrap time picker in activities

--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesListPage.html
@@ -11,8 +11,8 @@
 		</form>
 		<table wicket:id="table">
 			<tr>
-				<th><span wicket:id="headDate">Date</span></th>
-				<th><span wicket:id="headKm">Km</span></th>
+				<th wicket:id="orderByDate"><span wicket:id="headDate">Date</span></th>
+				<th wicket:id="orderByKm"><span wicket:id="headKm">Km</span></th>
 				<th><span wicket:id="headBike">Bike</span></th>
 				<th colspan="2"><wicket:message key="head.actions" /></th>
 			</tr>
