--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.html
@@ -22,7 +22,7 @@
 				<input wicket:id="txtId" type="text" />
 				<div class="form-group">
 					<label for="txtTime" wicket:id="lblTime">time:</label> 
-					<span class="form-control" wicket:id="txtTime">Tiempo</span>
+					<span class="form-control" wicket:id="txtTime" >span</span>
 				</div>
 				<div class="form-group">
 					<label for="txtKm" wicket:id="lblKm">Km:</label>
