--- a/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
@@ -9,7 +9,8 @@
 		<form wicket:id="form">
 			<button wicket:id="btnAdd"></button>
 		</form>
-		<table wicket:id="table">
+	<!-- 
+	 	<table wicket:id="table">
 			<tr>
 				<th><wicket:message key="head.code" /></th>
 				<th><wicket:message key="head.desc" /></th>
@@ -20,6 +21,9 @@
 				<td wicket:id="dataRow"></td>
 			</tr>
 		</table>
+	 -->
+	 <input type="text" wicket:id="tipoFilter"/>
+	 	<table class="dataview" cellspacing="0" wicket:id="table">[table]</table>
 		<ul wicket:id="pagingNavigator">
 			<li>1</li>
 			<li>2</li>
