--- a/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 	<wicket:extend>
-		<form wicket:id="form">
-			<button wicket:id="btnAdd"></button>
-		</form>
 	<!-- 
+		<form wicket:id="form">
+		</form>
 	 	<table wicket:id="table">
 			<tr>
 				<th><wicket:message key="head.code" /></th>
@@ -23,7 +22,17 @@
 		</table>
 	 <input type="text" wicket:id="tipoFilter"/>
 	 -->
-	 	<table class="dataview" cellspacing="0" wicket:id="table">[table]</table>
+	 <form wicket:id="filter-form">
+	 	<div class="span3">
+			<button wicket:id="btnAdd"></button>
+	 	</div>
+	 	<div class="span3">
+			<div wicket:id="gcFilter">Botones Filtros</div>
+	 	</div>
+	 	<table class="dataview" cellspacing="0" wicket:id="table">
+	 	[table]
+	 	</table>
+	 </form>
 		<ul wicket:id="pagingNavigator">
 			<li>1</li>
 			<li>2</li>
