mas pruebas datatable

--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesListPage.html
@@ -8,23 +8,15 @@
 	<wicket:extend>
 		<form wicket:id="form">
 			<button wicket:id="btnAdd"></button>
-		</form>
-		<table wicket:id="table">
-			<tr>
-				<th wicket:id="orderByDate"><span wicket:id="headDate">Date</span></th>
-				<th wicket:id="orderByKm"><span wicket:id="headKm">Km</span></th>
-				<th><span wicket:id="headBike">Bike</span></th>
-				<th colspan="2"><wicket:message key="head.actions" /></th>
-			</tr>
-			<tr wicket:id="rows">
-				<td wicket:id="dataRow"></td>
-			</tr>
-		</table>
+			<table wicket:id="table">
+				tabla
+			</table>
 		<ul wicket:id="pagingNavigator">
 			<li>1</li>
 			<li>2</li>
 			<li>3</li>
 		</ul>
+		</form>
 	</wicket:extend>
 </body>
 </html>
