interface, counts, listado usos modernizandose

--- a/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<wicket:extend>
-		<form wicket:id="form">
+		<form wicket:id="button-form">
 			<button wicket:id="btnAdd"></button>
 	 </form>
 	 <form wicket:id="filter-form">
