--- a/src/main/resources/an/dpr/manteniket/pages/BikeCompListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BikeCompListPage.html
@@ -5,11 +5,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
+			<!--
 	<wicket:extend>
 	<form wicket:id="form">
 		<div class="btn-group">
 			<button wicket:id="btnAdd"></button>
-			<!--<button wicket:id="btnReturn"></button> -->
 		</div>
 	</form>
 		<table wicket:id="table">
@@ -29,6 +29,18 @@
 			<li>2</li>
 			<li>3</li>
 		</ul>
+	</wicket:extend>
+			-->
+	
+	<wicket:extend>
+		<form wicket:id="button-form">
+			<button wicket:id="btnAdd"></button>
+	 </form>
+	 <form wicket:id="filter-form">
+	 	<table class="dataview" cellspacing="0" wicket:id="table">
+	 	[table]
+	 	</table>
+	 </form>
 	</wicket:extend>
 </body>
 </html>
