cruds with manteniketDataTable and find by user

--- a/src/main/resources/an/dpr/manteniket/pages/ComponentsListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ComponentsListPage.html
@@ -6,19 +6,14 @@
 </head>
 <body>
 	<wicket:extend>
-		<form wicket:id="form">
+		<form wicket:id="buttons-form">
 			<button wicket:id="btnAdd"></button>
-		</form>
-		<table wicket:id="table">
-			<tr wicket:id="rows">
-				<td wicket:id="dataRow"></td>
-			</tr>
-		</table>
-		<ul wicket:id="pagingNavigator">
-			<li>1</li>
-			<li>2</li>
-			<li>3</li>
-		</ul>
+	 </form>
+	 <form wicket:id="filter-form">
+	 	<table class="dataview" cellspacing="0" wicket:id="table">
+	 	[table]
+	 	</table>
+	 </form>
 	</wicket:extend>
 </body>
 </html>
