mensajes confirmacion bugfixeds

--- a/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/BicisListPage.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 	<wicket:extend>
-		<form wicket:id="button-form">
+	<div wicket:id="notification"></div>
+	
+	<form wicket:id="button-form">
 			<button wicket:id="btnAdd"></button>
 	 </form>
 	 <form wicket:id="filter-form">
