--- a/src/main/resources/an/dpr/manteniket/pages/ComponentsListPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ComponentsListPage.html
@@ -6,14 +6,15 @@
 </head>
 <body>
 	<wicket:extend>
+		<div wicket:id="notification"></div>
 		<form wicket:id="buttons-form">
 			<button wicket:id="btnAdd"></button>
-	 </form>
-	 <form wicket:id="filter-form">
-	 	<table class="dataview" cellspacing="0" wicket:id="table">
-	 	[table]
-	 	</table>
-	 </form>
+		</form>
+		<form wicket:id="filter-form">
+			<table class="dataview" cellspacing="0" wicket:id="table">
+				[table]
+			</table>
+		</form>
 	</wicket:extend>
 </body>
 </html>
