--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesSummaryPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesSummaryPage.html
@@ -25,16 +25,33 @@
 					<select class="form-control" wicket:id="cmbType"></select>
 				</div>
 				<div class="form-group">
+					<label for="initDate"><wicket:message key="init.date" /></label>
+					<input wicket:id="initDate" type="text"/>
+				</div>
+				<div class="form-group">
+					<label for="finishDate"><wicket:message key="finish.date" /></label>
+					<input wicket:id="finishDate" type="text"/>
+				</div>
+				<div class="form-group">
+					<input type="checkbox" wicket:id="compare"/>
+				</div>
+				
+				<hr/>
+				
+				<div class="form-group">
 					<label for="km"><wicket:message key="lbl.km" />:</label> 
 					<label wicket:id="km">15</label>
+					<label wicket:id="compareKm">15</label>
 				</div>
 				<div class="form-group">
 					<label for="time"><wicket:message key="lbl.time" />:</label> 
 					<label wicket:id="time">2h 15'</label>
+					<label wicket:id="compareTime">15</label>
 				</div>
 				<div class="form-group">
 					<label for="numberActivities"><wicket:message key="lbl.numberActivities" />:</label> 
 					<label wicket:id="numberActivities">3</label>
+					<label wicket:id="compareNumAct">15</label>
 				</div>
 				<div class="form-group">
 					<button wicket:id="btnGetData">Get Data</button>
