mejoras bootstrap modal panel de resultados

--- a/src/main/resources/an/dpr/manteniket/pages/SummaryResultPanel.html
+++ b/src/main/resources/an/dpr/manteniket/pages/SummaryResultPanel.html
@@ -2,41 +2,42 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
 	<!-- km -->
 	<fieldset>
-		<div class="col-xs-1 col-sm-1 col-md-2 col-lg-2">&nbsp;</div>
-		<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
+		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">&nbsp;</div>
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 			<label for="km"><wicket:message key="lbl.km" />:</label>
 		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<label wicket:id="km">15</label> <label wicket:id="compareKm">15</label>
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+			<label wicket:id="km">15</label>
+		</div> 
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+			<label wicket:id="compareKm">15</label>
 		</div>
-		<div class="col-xs-1 col-sm-1 col-md-2 col-lg-2">&nbsp;</div>
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">&nbsp;</div>
+
 		<!-- time -->
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			&nbsp;
-			<!-- salto de linea -->
-		</div>
-		<div class="col-xs-1 col-sm-1 col-md-2 col-lg-2">&nbsp;</div>
-		<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
+		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">&nbsp;</div>
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 			<label for="time"><wicket:message key="lbl.time" />:</label>
 		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<label wicket:id="time">2h 15'</label> <label wicket:id="compareTime">15</label>
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+			<label wicket:id="time">2h 15'</label>
+		</div> 
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+			<label wicket:id="compareTime">15</label>
 		</div>
-		<div class="col-xs-1 col-sm-1 col-md-2 col-lg-2">&nbsp;</div>
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">&nbsp;<!-- salto de linea --></div>
 
 		<!-- number activities -->
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			&nbsp;
-			<!-- salto de linea -->
-		</div>
-		<div class="col-xs-1 col-sm-1 col-md-2 col-lg-2">&nbsp;</div>
-		<div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
+		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">&nbsp;</div>
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 			<label for="numberActivities"><wicket:message
 					key="lbl.numberActivities" />:</label>
 		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-			<label wicket:id="numberActivities">3</label> <label
-				wicket:id="compareNumAct">15</label>
+		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+			<label wicket:id="numberActivities">3</label>
+		</div> 
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+			<label wicket:id="compareNumAct">15</label>
 		</div>
 		<div class="col-xs-1 col-sm-1 col-md-2 col-lg-2">&nbsp;</div>
 	</fieldset>
