km alert in component

--- a/src/main/resources/an/dpr/manteniket/pages/ComponentsPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ComponentsPage.html
@@ -30,7 +30,13 @@
 
 		<div class="form-group">
 			<label for="txtDesc"><wicket:message key="lbl.desc"/></label> 
-			<input class="form-control"  wicket:id="txtDesc" ="text" size="100" placeholder="descripcion..."/>
+			<input class="form-control"  wicket:id="txtDesc" type="text" size="100" placeholder="descripcion..."/>
+		</div>
+
+		<div class="form-group">
+			<label for="kmAlert"><wicket:message key="km.alert"/></label> 
+			<input class="form-control"  wicket:id="kmAlert" type="text" size="100" placeholder="km alert..."/>
+
 		</div>
 		<div class="botonera">
 			<button wicket:id="saveBtn">
