nuevos componentes carga datos csv minutos en actividades

--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.html
@@ -21,8 +21,9 @@
 			<form wicket:id="form">
 				<input wicket:id="txtId" type="text" />
 				<div class="form-group">
-					<label for="txtTime" wicket:id="lblTime">time:</label> 
-					<span class="form-control" wicket:id="txtTime" >span</span>
+					<label for="txtHours" wicket:id="lblTime">time:</label> <br/>
+					<input wicket:id="txtHours" size=2/>&nbsp<span>H</span>
+					<input wicket:id="txtMinutes" size=2/> &nbsp<span>'</span>
 				</div>
 				<div class="form-group">
 					<label for="txtKm" wicket:id="lblKm">Km:</label>
