mejora alerts disabled date en components

--- a/src/main/resources/an/dpr/manteniket/pages/ComponentsPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/ComponentsPage.html
@@ -38,6 +38,13 @@
 			<input class="form-control"  wicket:id="kmAlert" type="text" size="100" placeholder="km alert..."/>
 
 		</div>
+
+		<div class="form-group">
+			<label for="disabledDate"><wicket:message key="disabled.date"/></label> 
+			<input class="form-control"  wicket:id="disabledDate" type="text" size="100" placeholder="01/01/2001"/>
+
+		</div>
+		
 		<div class="botonera">
 			<button wicket:id="saveBtn">
 				<wicket:message key="btn.save"/>
