--- a/src/main/resources/an/dpr/manteniket/MainPage.html
+++ b/src/main/resources/an/dpr/manteniket/MainPage.html
@@ -6,15 +6,17 @@
 </head>
 <body>
 	<wicket:extend>
-		<!-- 
-		 <span wicket:id="lblBienvenida">hola</span>
-		 -->
-		 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><span wicket:id="prueba">alertas de prueba</span></div>
-		 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">&nbsp;</div>
-		 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-		 	<div wicket:id="carousel">carousel</div>
-		 </div>
-		 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">&nbsp;</div>
+		
+		<div wicket:id="alerts">
+			<div wicket:id="alert" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">alerta</div>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"><hr/></div>
+
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">&nbsp;</div>
+		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<div wicket:id="carousel">carousel</div>
+		</div>
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">&nbsp;</div>
 	</wicket:extend>
 </body>
 </html>
