--- a/src/main/resources/an/dpr/manteniket/pages/MaintenancePage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/MaintenancePage.html
@@ -21,7 +21,7 @@
 			<form wicket:id="form">
 				<input wicket:id="txtId" type="text" />
 				<div class="form-group">
-					<label for="txtDate" wicket:id="lblDate">date:</label> 
+					<label for="txtDate"><wicket:message key="lbl.date" /></label> 
 					<input class="form-control" wicket:id="txtDate"	type="text" size="10" />
 				</div>
 				<div class="form-group">
