--- a/src/main/resources/an/dpr/manteniket/pages/MaintenancesPage.html
+++ b/src/main/resources/an/dpr/manteniket/pages/MaintenancesPage.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="form-group">
 					<label for="cmbType"><wicket:message key="lbl.component" /></label> 
-					<select class="form-control" wicket:id="cmbComponent"></select>
+					<select class="form-control" wicket:id="cmbComp"></select>
 				</div>
 				<div class="form-group">
 					<label for="cmbType"><wicket:message key="lbl.type" /></label> 
